--- a/first_next_app/components/Product/style.module.scss
+++ b/first_next_app/components/Product/style.module.scss
@@ -2,8 +2,14 @@
   padding: 20px;
   border: 2px solid black;
   width: 400px;
-}
 
-.wrapper img {
+
+&wrapper img {
   max-width: 300px;
 }
+
+
+}
+
+
+
